--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Auto-Reproducido</title>
+    <title>Video con Audio</title>
 
     <style>
         body {
@@ -11,26 +11,67 @@
             background: #000;
             overflow: hidden;
         }
+
         video {
             width: 100vw;
             height: 100vh;
             object-fit: cover;
+            display: none; /* Se oculta hasta que inicie */
+        }
+
+        #startScreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #000;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-family: sans-serif;
+        }
+
+        #playBtn {
+            padding: 20px 35px;
+            background: #ffffff20;
+            border: 2px solid #fff;
+            border-radius: 10px;
+            font-size: 24px;
+            color: #fff;
+            cursor: pointer;
+        }
+
+        #playBtn:hover {
+            background: #ffffff40;
         }
     </style>
 </head>
 <body>
 
-    <video id="video" autoplay muted playsinline>
-        <source src="video.mp4" type="video/mp4" />
+    <div id="startScreen">
+        <h2>Presiona para iniciar con audio</h2>
+        <button id="playBtn">Reproducir 🔊</button>
+    </div>
+
+    <video id="video" loop playsinline>
+        <source src="video.mp4" type="video/mp4">
         Tu navegador no soporta video HTML5.
     </video>
 
     <script>
-        // Intento de reproducir (por si algunos navegadores bloquean el autoplay)
-        const vid = document.getElementById("video");
-        vid.play().catch(() => {
-            console.log("Autoplay bloqueado, se intentará reproducir al primer clic.");
-            document.body.addEventListener("click", () => vid.play(), { once: true });
+        const video = document.getElementById("video");
+        const startScreen = document.getElementById("startScreen");
+        const playBtn = document.getElementById("playBtn");
+
+        playBtn.addEventListener("click", () => {
+            startScreen.style.display = "none";
+            video.style.display = "block";
+            video.muted = false;
+            video.volume = 1;
+            video.play();
         });
     </script>
 
